objects/DSS_Echo_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DSS Echo Surveys</relationshipLabel>
        <relationshipName>DSS_Echo_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Date__c</fullName>
        <description>Date the call was completed</description>
        <label>Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Echo_Message_ID__c</fullName>
        <label>Echo Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Case__c</fullName>
        <label>Salesforce Case #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <description>From Echo (inContact IVR)</description>
        <label>Survey Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inContact_ID__c</fullName>
        <label>inContact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DSS Echo Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>IVR Echo Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DSS Echo Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>